--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "lib": ["es5", "es6", "dom", "dom.iterable"]
 }
