--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^10.12.4",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-laag": "^2.0.5",
+    "react-tooltip": "^5.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
